--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
 body {
     margin: 0;
   }
-  
+  @media screen and (max-width: 600px) {
+    body {
+      background-color: olive;
+    }
   #navbar {
     position: fixed;
     top: 0px;
